@@ -462,7 +462,8 @@ li .heading:hover {
   background-color: blue;
 }
 .label[data-format=json],
-.label[data-format*=json] {
+.label[data-format*=json],
+.label[data-format=geojson] {
   background-color: #ef7100;
 }
 .label[data-format=xml],
@@ -570,6 +571,10 @@ li .heading:hover {
 }
 .format-label[data-format=json]:before {
   content: "\e651";
+  color: #ef7100;
+}
+.format-label[data-format=geojson]:before {
+  content: "\e923";
   color: #ef7100;
 }
 .format-label[data-format=pdf]:before {
